# NAVI-Research

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
.agents/workflows/: brainstorming.md  debugging.md  executing-plans.md  paper-drafting.md  research-simulate.md  superpowers.md  tdd.md  writing-plans.md
dashboard/: app.js  index.html  package-lock.json  package.json  style.css
dashboard/app/: layout.tsx  page.tsx
dashboard/app/admin/: page.tsx
dashboard/components/: admin-login-gate.tsx  admin-provider.tsx  folder-dialog.tsx  header.tsx  lang-toggle.tsx  locale-provider.tsx  read-client.tsx  read-settings.tsx  session-menu.tsx
dashboard/functions/api/: folders.ts
dashboard/lib/: data.ts  folder-store.ts  i18n.ts  load-session.ts
dashboard/public/: sessions.json
docs/drafts/: 2026-03-13-llm-agents-survey.md
docs/plans/: 2026-03-13-navi-research.md
docs/references/: 박사급_논문_AI_시뮬레이터_PRD.docx
docs/sessions/: index.md
docs/sessions/_search-cache/: results.bib  results.json  (+1 more)
docs/specs/: 2026-03-13-navi-research-design.md  2026-03-13-research-workflow-improvement-design.md  2026-03-13-session-management-ui-design.md
scripts/: auto-commit.sh
scripts/research_tools/: __init__.py
src/navi_research/: citation_db.py  cli.py  dedup.py  models.py  search.py
tests/: test_citation_db.py  test_dedup.py  test_models.py  test_search.py  test_search_multi.py
tests/fixtures/: openalex_response.json  semantic_response.json
tests/test_exporters/: test_exports.py
tests/test_sources/: test_arxiv.py  test_openalex.py  test_semantic.py
(+30 files in other folders)
